--- a/index.html
+++ b/index.html
@@ -223,6 +223,7 @@
     <!-- Footer -->
     <nav id="footer" class="navbar navbar-default navbar-fixed-bottom">
             <div class="container-fluid">
+                    <span class="navbar-text pull-left">v 1.0</span>
                     <span class="navbar-text pull-right">
                         Developed by Konstantin Shvyryaev
                         &copy; 2017
