--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <nav id="navbar" class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" 
+                <button type="button" class="navbar-toggle collapsed" id="toggleButton"
                 data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" 
                 aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -34,7 +34,7 @@
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <div class="dropScroll collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-left">
                     <!-- Information of How work this application -->         
                     <li class="info">
@@ -62,7 +62,7 @@
                             Direct problem
                             <span class="caret"></span>
                         </a>
-                        <ul class="dropdown-menu dropScroll">
+                        <ul class="dropdown-menu">
                             <li class="dropInputFields">
                                 <form class="navbar-form" role="form">
                                     <div class="form-group">
@@ -102,7 +102,7 @@
                             Inverse problem
                             <span class="caret"></span>
                         </a>
-                        <ul class="dropdown-menu dropScroll">
+                        <ul class="dropdown-menu">
                             <li class="dropInputFields">
                                 <form class="navbar-form" role="input">
                                     <div class="form-group">
