--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
                     <p>
                         You need to choose the <strong>lengths</strong> of your links, 
                         the <strong>angle</strong> of rotation of the first link and 
-                        the <strong>angle</strong> of rotation of the second link.
+                        the <strong>angle</strong> of rotation of the second link 
+                        in the tab <strong>Direct problem</strong>.
                         Then click on the <strong>button</strong>.
                     </p>
                     <hr>
@@ -169,7 +170,7 @@
                     <p>
                         You need to choose the <strong>lengths</strong> of your links, 
                         to select the <strong>X</strong> and the <strong>Y</strong> coordinates 
-                        where the manipulator will come.
+                        where the manipulator will come in the tab <strong>Inverse problem</strong>.
                         Then click on the <strong>button</strong>.
                     </p>
                     <hr>
